# FreeTimerAlert

./: .gitignore  LICENSE  README.md  build.py  debug_timer.py  example_usage.py  examples_debug_timer.py  gui.py  main.py  menu.py  pyproject.toml  terminal.py  timer.py
.github/instructions/: global-preferences.instructions.md
.github/workflows/: build.yml  ci.yml  release.yml
docs/: EXECUTABLE_BUILD.md
src/: __init__.py  __main__.py
src/core/: timer.py  timerexecutor.py
src/interfaces/: base_interface.py  notifications.py
src/interfaces/gui/: __init__.py  dialogs.py  gui.py  main_window.py  timer_widget.py
src/interfaces/terminal/: interface.py  notifications.py  terminal.py  terminal_notification.py  terminal_sounds.py
src/interfaces/web/: gui.py
src/services/: logger.py  parse_utils.py  system_notifications.py  timer_service.py
src/terminal/: interface.py  notifications.py
tests/: conftest.py  test_timer.py  test_timer_executor.py
tests/core/: __init__.py  conftest.py  test_timer.py
tests/gui/: README.md  __init__.py  conftest.py  test_dialogs.py  test_main_window.py  test_timer_widget.py
tests/integration/: README.md  test_integration.py
tests/services/: test_logger.py  test_parse_utils.py  test_system_notifications.py  test_timer_service.py  test_timer_service_callbacks.py
tests/terminal/: test_interface.py  test_notifications.py
