[project]
name = "freetimer"
version = "0.1.0"
description = "A simple, extensible timer application with clean architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playsound3>=3.2.8",
    "pydantic>=2.12.3",
    "pyside6>=6.10.0",
    "rich>=14.2.0",
]




[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "pytest>=8.3.4",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
format = 'uvx ruff format'
run = "python main.py"
test = "pytest tests/ -v"


[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]


[tool.ruff]
line-length = 180
