[project]
name = "freetimer"
version = "0.2.0"
description = "Simple terminal-based timer application with clean architecture"
readme = "README.md"
license = { text = "CC-BY-NC-SA-4.0" }
requires-python = ">=3.11"
dependencies = [
    "playsound3>=3.2.8",
    "rich>=14.2.0",
]




[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "taskipy>=1.14.1",
]
build = [
    "pyinstaller>=6.11.1",
]

[tool.taskipy.tasks]
format = 'uvx ruff format'
run = "python -m src"
gui = "python -m src --gui"
test = "pytest tests/ -v"
build = "python build.py"


[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]


[tool.ruff]
line-length = 180
